--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
 <div class="container-fluid" style="background-color: #F2F2F2;">
   <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1d2226;">
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <h4 style="color: white">Welcome to FAKESEC</h4>
     </div>
   </nav>
   <!-- NAVBAR -->
-
+   
   <div class="container">
     <div class="row">
       <div class="col">
-        <div class="text-center m-5">
+        <div class="text-center">
           <router-outlet></router-outlet>
         </div>
       </div>
